objects/Rebate_Item__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Rebate_Items</relationshipLabel>
        <relationshipName>Rebate_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Maximum_Rebate_Quantity__c</fullName>
        <label>Maximum_Rebate_Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product_Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Rebate_Items</relationshipLabel>
        <relationshipName>Rebate_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rebate_Amount__c</fullName>
        <label>Rebate_Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Rebate_Item</label>
    <nameField>
        <displayFormat>RIN-{0000}</displayFormat>
        <label>Rebate_Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebate_Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>